--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,14 +11,26 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b6bcf21b5f.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-<header class="site-header">
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Nosotros</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contactos</a>
-    </nav>
-</header>
+    <header class="site-header">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Nosotros</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contactos</a>
+        </nav>
+    </header>
+
+    <div class="hero">
+        <div class="contenedor-hero">
+            <h1>Diseño y Desarrollo Web Freelancer</h1>
+            <p></p>
+            <h2>Martin Pino</h2>
+            <p><i class="fas fa-map-marker-alt"></i> Córdoba, Argentina</p>
+            <a href="#" class="boton">Contactar</a>
+        </div>
+    </div>
 </body>
+
 </html>
