--- a/index.html
+++ b/index.html
@@ -31,6 +31,43 @@
             <a href="#" class="boton">Contactar</a>
         </div>
     </div>
+    <main class="servicios contenedor">
+        <h2>Nuestros Servicios</h2>
+        <!-- CLASE PADRE de cada servicio (se aplica flex a éste) -->
+        <div class="contenedor-servicios">
+            <div class="servicio">
+                <h3>Diseño Web</h3>
+                <div class="iconos">
+                    <i class="fas fa-pencil-alt"></i>
+                </div>
+                <p>Vivamus massa ipsum, sodales fermentum velit suscipit, condimentum pellentesque dolor. Mauris dictum erat nec varius sodales. Nunc consequat sapien vestibulum vehicula pharetra. Nunc sit amet metus quis felis gravida consectetur. Nulla
+                    facilisi. Proin aliquam et nunc vel elementum. Phasellus vitae condimentum augue, ut maximus turpis. Duis eget feugiat enim. Nullam varius neque in urna semper, quis auctor dui ultrices. Praesent pellentesque malesuada eros at vestibulum.
+                    Nulla eleifend augue ut dui luctus gravida.</p>
+            </div>
+            <div class="servicio">
+                <h3>Planillas Excel</h3>
+                <div class="iconos">
+                    <i class="far fa-file-excel"></i>
+
+                    <i class="fas fa-calculator"></i>
+                </div>
+                <p>Vivamus massa ipsum, sodales fermentum velit suscipit, condimentum pellentesque dolor. Mauris dictum erat nec varius sodales. Nunc consequat sapien vestibulum vehicula pharetra. Nunc sit amet metus quis felis gravida consectetur. Nulla
+                    facilisi. Proin aliquam et nunc vel elementum. Phasellus vitae condimentum augue, ut maximus turpis. Duis eget feugiat enim. Nullam varius neque in urna semper, quis auctor dui ultrices. Praesent pellentesque malesuada eros at vestibulum.
+                    Nulla eleifend augue ut dui luctus gravida.</p>
+            </div>
+            <div class="servicio">
+                <h3>Social Media</h3>
+                <div class="iconos">
+                    <i class="fas fa-share-alt-square"></i>
+
+                    <i class="fas fa-users"></i>
+                </div>
+                <p>Vivamus massa ipsum, sodales fermentum velit suscipit, condimentum pellentesque dolor. Mauris dictum erat nec varius sodales. Nunc consequat sapien vestibulum vehicula pharetra. Nunc sit amet metus quis felis gravida consectetur. Nulla
+                    facilisi. Proin aliquam et nunc vel elementum. Phasellus vitae condimentum augue, ut maximus turpis. Duis eget feugiat enim. Nullam varius neque in urna semper, quis auctor dui ultrices. Praesent pellentesque malesuada eros at vestibulum.
+                    Nulla eleifend augue ut dui luctus gravida.</p>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
