--- a/index.html
+++ b/index.html
@@ -31,43 +31,75 @@
             <a href="#" class="boton">Contactar</a>
         </div>
     </div>
-    <main class="servicios contenedor">
-        <h2>Nuestros Servicios</h2>
-        <!-- CLASE PADRE de cada servicio (se aplica flex a éste) -->
-        <div class="contenedor-servicios">
-            <div class="servicio">
-                <h3>Diseño Web</h3>
-                <div class="iconos">
-                    <i class="fas fa-pencil-alt"></i>
+    <div class="contenedor">
+        <main class="servicios">
+            <h2>Nuestros Servicios</h2>
+            <!-- CLASE PADRE de cada servicio (se aplica flex a éste) -->
+            <div class="contenedor-servicios">
+                <div class="servicio">
+                    <h3>Diseño Web</h3>
+                    <div class="iconos">
+                        <i class="fas fa-pencil-alt"></i>
+                    </div>
+                    <p>Vivamus massa ipsum, sodales fermentum velit suscipit, condimentum pellentesque dolor. Mauris dictum erat nec varius sodales. Nunc consequat sapien vestibulum vehicula pharetra. Nunc sit amet metus quis felis gravida consectetur. Nulla
+                        facilisi. Proin aliquam et nunc vel elementum. Phasellus vitae condimentum augue, ut maximus turpis. Duis eget feugiat enim. Nullam varius neque in urna semper, quis auctor dui ultrices. Praesent pellentesque malesuada eros at
+                        vestibulum. Nulla eleifend augue ut dui luctus gravida.</p>
                 </div>
-                <p>Vivamus massa ipsum, sodales fermentum velit suscipit, condimentum pellentesque dolor. Mauris dictum erat nec varius sodales. Nunc consequat sapien vestibulum vehicula pharetra. Nunc sit amet metus quis felis gravida consectetur. Nulla
-                    facilisi. Proin aliquam et nunc vel elementum. Phasellus vitae condimentum augue, ut maximus turpis. Duis eget feugiat enim. Nullam varius neque in urna semper, quis auctor dui ultrices. Praesent pellentesque malesuada eros at vestibulum.
-                    Nulla eleifend augue ut dui luctus gravida.</p>
-            </div>
-            <div class="servicio">
-                <h3>Planillas Excel</h3>
-                <div class="iconos">
-                    <i class="far fa-file-excel"></i>
+                <div class="servicio">
+                    <h3>Planillas Excel</h3>
+                    <div class="iconos">
+                        <i class="far fa-file-excel"></i>
 
-                    <i class="fas fa-calculator"></i>
+                        <i class="fas fa-calculator"></i>
+                    </div>
+                    <p>Vivamus massa ipsum, sodales fermentum velit suscipit, condimentum pellentesque dolor. Mauris dictum erat nec varius sodales. Nunc consequat sapien vestibulum vehicula pharetra. Nunc sit amet metus quis felis gravida consectetur. Nulla
+                        facilisi. Proin aliquam et nunc vel elementum. Phasellus vitae condimentum augue, ut maximus turpis. Duis eget feugiat enim. Nullam varius neque in urna semper, quis auctor dui ultrices. Praesent pellentesque malesuada eros at
+                        vestibulum. Nulla eleifend augue ut dui luctus gravida.</p>
                 </div>
-                <p>Vivamus massa ipsum, sodales fermentum velit suscipit, condimentum pellentesque dolor. Mauris dictum erat nec varius sodales. Nunc consequat sapien vestibulum vehicula pharetra. Nunc sit amet metus quis felis gravida consectetur. Nulla
-                    facilisi. Proin aliquam et nunc vel elementum. Phasellus vitae condimentum augue, ut maximus turpis. Duis eget feugiat enim. Nullam varius neque in urna semper, quis auctor dui ultrices. Praesent pellentesque malesuada eros at vestibulum.
-                    Nulla eleifend augue ut dui luctus gravida.</p>
-            </div>
-            <div class="servicio">
-                <h3>Social Media</h3>
-                <div class="iconos">
-                    <i class="fas fa-share-alt-square"></i>
+                <div class="servicio">
+                    <h3>Social Media</h3>
+                    <div class="iconos">
+                        <i class="fas fa-share-alt-square"></i>
 
-                    <i class="fas fa-users"></i>
+                        <i class="fas fa-users"></i>
+                    </div>
+                    <p>Vivamus massa ipsum, sodales fermentum velit suscipit, condimentum pellentesque dolor. Mauris dictum erat nec varius sodales. Nunc consequat sapien vestibulum vehicula pharetra. Nunc sit amet metus quis felis gravida consectetur. Nulla
+                        facilisi. Proin aliquam et nunc vel elementum. Phasellus vitae condimentum augue, ut maximus turpis. Duis eget feugiat enim. Nullam varius neque in urna semper, quis auctor dui ultrices. Praesent pellentesque malesuada eros at
+                        vestibulum. Nulla eleifend augue ut dui luctus gravida.</p>
                 </div>
-                <p>Vivamus massa ipsum, sodales fermentum velit suscipit, condimentum pellentesque dolor. Mauris dictum erat nec varius sodales. Nunc consequat sapien vestibulum vehicula pharetra. Nunc sit amet metus quis felis gravida consectetur. Nulla
-                    facilisi. Proin aliquam et nunc vel elementum. Phasellus vitae condimentum augue, ut maximus turpis. Duis eget feugiat enim. Nullam varius neque in urna semper, quis auctor dui ultrices. Praesent pellentesque malesuada eros at vestibulum.
-                    Nulla eleifend augue ut dui luctus gravida.</p>
             </div>
-        </div>
-    </main>
+        </main>
+
+        <section id="contacto" class="contacto">
+            <h2>Contacto</h2>
+            <form action="#">
+                <legend>Contactanos llenando todos los campos</legend>
+                <div class="contenedor-campos">
+                    <div class="campo">
+                        <label>Nombre:</label>
+                        <input type="text" name="nombre" placeholder="Nombre">
+                    </div>
+                    <div class="campo">
+                        <label>Teléfono</label>
+                        <input type="tel" name="nombre" placeholder="Telefono">
+                    </div>
+                    <div class="campo w-100">
+                        <label>E-mail:</label>
+                        <input type="email" name="nombre" placeholder="Correo">
+                    </div>
+                    <div class="campo w-100">
+                        <label>Mensaje</label>
+                        <textarea></textarea>
+                    </div>
+                </div>
+
+                <div class="enviar">
+                    <input type="submit" class="boton" value="Enviar">
+                </div>
+
+            </form>
+        </section>
+    </div>
 </body>
 
 </html>
