--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <input type="text" name="nombre" placeholder="Nombre">
                     </div>
                     <div class="campo">
-                        <label>Teléfono</label>
+                        <label>Teléfono:</label>
                         <input type="tel" name="nombre" placeholder="Telefono">
                     </div>
                     <div class="campo w-100">
@@ -88,7 +88,7 @@
                         <input type="email" name="nombre" placeholder="Correo">
                     </div>
                     <div class="campo w-100">
-                        <label>Mensaje</label>
+                        <label>Mensaje:</label>
                         <textarea></textarea>
                     </div>
                 </div>
