--- a/index.html
+++ b/index.html
@@ -101,5 +101,15 @@
         </section>
     </div>
 </body>
+<footer>
+    <div class="contenedor-footer">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Nosotros</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </div>
+</footer>
 
 </html>
